some small changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>React & Coffee</title>
   </head>
   <body>
+    <div id="container"></div>
     <script async src="/static/bundle.js"></script>
   </body>
 </html>
